# academic-prioritizer-cli

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/engine/: prioritizer.py
src/ingestion/: calendar_client.py  drive_client.py  google_auth.py  tasks_client.py
src/interface/: cli.py  interactive.py
src/models/: task.py
src/processing/: matcher.py  normalizer.py  scorer.py
src/state/: dismissed.py
