[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "academic-prioritizer"
version = "0.1.0"
description = "CLI tool to prioritize academic tasks from Google Tasks, Calendar, and Drive."
requires-python = ">=3.10"
dependencies = [
    "google-api-python-client",
    "google-auth-httplib2",
    "google-auth-oauthlib",
    "python-dotenv",
]

[project.scripts]
academic-prioritizer = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
